--- a/hw2.html
+++ b/hw2.html
@@ -31,9 +31,9 @@
                 return `${Math.abs(diff)} seconds`;
             }
         }
-        // console.log(durationBetweenDates('02 Aug 1985', '03 Aug 1985', 'seconds'));
-        // console.log(durationBetweenDates('31 Jan 2022', '03 Feb 2021', 'days'));
-        console.log(durationBetweenDates());
+        console.log(durationBetweenDates('02 Aug 1985', '03 Aug 1985', 'seconds'));
+        console.log(durationBetweenDates('31 Jan 2022', '03 Feb 2021', 'days'));
+        // console.log(durationBetweenDates());
         
         //2
         
