--- a/switcher.html
+++ b/switcher.html
@@ -70,6 +70,6 @@
             </div>
         </div>
     </section>
-    <script src="index.js"></script>
+    <script src="switcher.js"></script>
 </body>
 </html>
